--- a/day1/day1.html
+++ b/day1/day1.html
@@ -123,7 +123,7 @@ where `\(\mathbf{y}\)` is the vector of observed phenotypes, `\(\mathbf{g}\)` is
 
 Example:
 
-| Plant ID   | y           | g  |   e  |
+| Animal ID   | y           | g  |   e  |
 | ------------- |:-------------:| -----:|------|
 | 1      | 10 | ? |  ?     |
 | 2      |  7     |   ? |  ?    |
@@ -143,7 +143,7 @@ where `\(\mathbf{y}\)` is the vector of observed phenotypes, `\(\mathbf{g}\)` is
 
 Example:
 
-| Plant ID    | y           | g  |   e  |
+| Animal ID    | y           | g  |   e  |
 | ------------- |:-------------:| -----:|------|
 | 1      | 10 | 5 |  5     |
 | 2      |  7     |   6 |  1    |
