--- a/ESALQ2019.html
+++ b/ESALQ2019.html
@@ -43,7 +43,7 @@
   <li>May 20 (Mon.)</li>
   <ul style="list-style-type:none">
    <li>9:00-10:30 - Genomic Selection in Practice: Examples from the U.S. beef and swine industries</li>
-    <li>10:30-12:00 - Decoding best linear unbiased prediction (BLUP) [<a href="http://morotalab.org/ESALQ2019/day1/day1.html">HTML1</a>][<a href="http://morotalab.org/ESALQ2019/lab1/lab1.html">R</a>]</li>
+    <li>10:30-12:00 - Decoding best linear unbiased prediction (BLUP) [<a href="http://morotalab.org/ESALQ2019/day1/day1.html">HTML</a>][<a href="http://morotalab.org/ESALQ2019/lab1/lab1.html">R</a>]</li>
     <li>12:00-13:30 - Lunch break</li>
     <li>13:30-16:00 - GBLUP </li>
   </ul>
@@ -58,7 +58,7 @@
 
   <li>May 22 (Wed.)</li>
   <ul style="list-style-type:none">
-   <li>9:00-11:00 - Genetic analysis of time series high-throughput phenomics & Lab: ShinyAIM and ShinyGPAS</li>
+   <li>9:00-11:00 - Genetic analysis of time series high-throughput phenomics & Lab: ShinyAIM  [<a href="http://morotalab.org/ESALQ2019/day3a/day3a.html">HTML1</a>][<a href="http://morotalab.org/ESALQ2019/day3b/day3b.html">HTML2</a>]</li></li>
     <li>11:00-12:00 - Economic selection indices post genomic selection</li>
   </ul>
 
