--- a/day3a/day3a.html
+++ b/day3a/day3a.html
@@ -442,7 +442,7 @@ The number of regression coefficients is given by the number of knots + degree â
 
 
 ---
-# bioRxiv preprint
+# Additional topics 
 ![](arxiv.png)
 [https://arxiv.org/abs/1904.12341](https://arxiv.org/abs/1904.12341)
 
