--- a/ESALQ2019.html
+++ b/ESALQ2019.html
@@ -74,7 +74,7 @@
 
   <li>May 24 (Fri.)</li>
   <ul style="list-style-type:none">
-   <li>9:00-10:30 - Bayesian factor analysis, Bayesian network, & Structural equation model for GWAS </li>
+   <li>9:00-10:30 - Bayesian factor analysis, Bayesian network, & Structural equation model for GWAS [<a href="http://morotalab.org/ESALQ2019/day5a/day5a.html">HTML1</a>]</li>
     <li>10:30-12:00 - Genomic connectedness</li>
     <li>12:00-13:30 - Lunch break</li>
     <li>13:30-16:00 - Lab: Network-based genetic analysis & Genomic connectedness </li>
