--- a/day5a/day5a.html
+++ b/day5a/day5a.html
@@ -94,7 +94,7 @@ Assume observed phenotypes are derived from  underlying latent variables
 
 ---
 # Study the genetics of each latent variable
-![](BCFA.pdf)
+&lt;img src="BCFA.jpg" height="530px" width="700px"/&gt;
 
 ---
 # Multivariate analysis
@@ -113,7 +113,7 @@ Assume observed phenotypes are derived from  underlying latent variables
 
 ---
 # Constraint-based learning
-![](Fig3.pdf)
+&lt;img src="Fig3.jpg" height="530px" width="700px"/&gt;
 
 
 
@@ -128,32 +128,35 @@ Assume observed phenotypes are derived from  underlying latent variables
 
 ---
 # Genetic correlations among latent variable
-![](Cor_plot_for_presentation.pdf)
+&lt;img src="Cor_plot_for_presentation.png" height="530px" width="700px"/&gt;
 
 ---
 # Hill Climbing algorithm
-![](BN_HC.pdf)
+&lt;img src="BN_HC.png" height="530px" width="700px"/&gt;
+
 
 
 
 ---
 # Tabu algorithm
-![](BN_TABU.pdf)
+&lt;img src="BN_TABU.png" height="530px" width="700px"/&gt;
+
 
 
 ---
 # Max-Min Hill Climbing algorithm
-![](BN_MMHC.pdf)
+&lt;img src="BN_MMHC.png" height="530px" width="700px"/&gt;
+
 
 
 ---
 # General 2-Phase Restricted Maximization algorithm
-&lt;img src="BN_RSMAX2.pdf" height="460px" width="650px"/&gt;
+&lt;img src="BN_RSMAX2.png" height="460px" width="650px"/&gt;
 
 
 ---
 # Consensus Bayesian network
-![](BN_consensus.pdf)
+&lt;img src="BN_consensus.png" height="460px" width="650px"/&gt;
 
 ---
 # Paper - 10.1534/g3.119.400154
