--- a/ESALQ2019.html
+++ b/ESALQ2019.html
@@ -86,7 +86,7 @@
 <br>
 <h3>Misc</h3>
 <ul>
-  <li>Group picture [<a href="pdf/cursonebraska.pdf">PDF</a>]</li>
+  <li>Group picture [<a href="pdf/groupPic.jpg">PDF</a>]</li>
 </ul>
 
 
